For details on all of the subsystems that support the metadata DSL, see xref:operation:deep-dive/meta-data.adoc[the operation manual].

=== Confd improvements

Support for `confd` has been added to the Sentinel container.

=== UI: structured node list

An enhanced node list has been introduced with options for sorting and filtering.

== Breaking changes

=== Passive Status Monitor
The Passive Status Monitor previously used the time of the event's arrival as the timestamp of the status.
As this is too imprecise for some use cases, the time field of the event is now also evaluated.
If the field is set, it is adopted unchanged as the timestamp of the status.
If no time is set, the timestamp is generated as before when the event arrives.

=== SNMP Metadata Provisioning Adapter
The SNMP Metadata Provisioning Adapter is not enabled by default anymore.
Set `enabled="true"` in the configuration file `$OPENNMS_HOME/etc/snmp-metadata-adapter-configuration.xml` to enable it.

=== Docker image changes

The Docker images for the core, minion, and sentinel have been changed from being Ubuntu-based to using RedHat's link:https://www.redhat.com/en/blog/introducing-red-hat-universal-base-image[Universal Base Image].
This move shrinks the image a bit, makes minimal updating easier, and should simplify running in restrictive OpenShift environments.

The images are based on the `ubi9-minimal` image, which is essentially a stripped down version of RHEL 9.
This means that things will have moved around a bit in the filesystem, and that you should use `microdnf` for package management.

=== Important internal updates

* Our embedded Karaf container and Karaf APIs have been updated to 4.3.10
* The OpenNMS Plugin API has been updated to 1.6.0
* Zookeeper APIs have been updated to 3.7.x