@@ -8,34 +8,29 @@
 
 #
 # This property defines which RrdStrategy implementation to use for writing data to
-# RRD files.  There are two RrdStrategies that ship with opennms.  The first one is
-# org.opennms.netmgt.rrd.rrdtool.JniRrdStrategy.  It uses the original JNI RrdTool based code
-# to write to the rrdtool compatible .rrd files.  The second version uses JRobin, a
-# pure java implementation of RrdTool.  Its class name is 
-# org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy
+# RRD files. There are three RrdStrategies that ship with OpenNMS. The first one is
+# org.opennms.netmgt.rrd.rrdtool.JniRrdStrategy. The new multithreaded JNI implementation
+# is org.opennms.netmgt.rrd.rrdtool.MultithreadedJniRrdStrategy. Both use the original
+# JNI RrdTool based code to write to the rrdtool compatible .rrd files. The third version
+# uses JRobin, a pure java implementation of RrdTool. Its class name is
+# org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy. The JRobin implementation is deprecated
+# and will be removed in a future release.
 #
-# To switch to the JNI implementation uncomment the following lines.  Note
+# The new multithreaded JNI implementation is set here by default. Note
 # that paths may differ from one platform to the next, and a few platforms
 # use an extension other than ".so" on JNI shared objects; Mac OS X notably
 # uses ".jnilib":
 #org.opennms.rrd.strategyClass=org.opennms.netmgt.rrd.rrdtool.MultithreadedJniRrdStrategy
 #org.opennms.rrd.interfaceJar=/usr/share/java/jrrd2.jar
 #opennms.library.jrrd2=/usr/lib64/libjrrd2.so
-#
-# The default setting is org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy
+
+# To use the (pure-java) JRobin strategy instead, comment the above and uncomment this:
 #org.opennms.rrd.strategyClass=org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy
 
-#
-# This property allows the definition of a custom file extension to use for data files.
-# OpenNMS uses the extension to find which files to use.  The jrobin convertor tool will
-# append .jrb to the filenames for the new files it creates.  This property will allow the 
-# use of these new files by setting the extension to .rrd.jrb
-#
-# The default fileExtension is approperiate for the Strategy in use... JRobin uses .jrb and 
-# JNI uses .rrd.  If you set a value here that value will be used regardless of the value preferred
-# by the individual strategies.
-#org.opennms.rrd.fileExtension=.jrb
-
+# To enable the old JNI strategy, use the following configuration instead:
+#org.opennms.rrd.strategyClass=org.opennms.netmgt.rrd.rrdtool.JniRrdStrategy
+#org.opennms.rrd.interfaceJar=/usr/share/java/jrrd.jar
+#opennms.library.jrrd=/usr/lib64/libjrrd.so
 
 #
 # This property defines whether or not to use the write queuing system.  
